plugins {
    id 'org.jetbrains.kotlin.jvm' version '2.1.0'
    id 'org.jetbrains.kotlin.plugin.serialization' version '2.1.0'
}

group = 'org.sayandev'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        url = uri("https://repo.sayandev.org/snapshots")
    }
}

dependencies {
    testImplementation 'org.jetbrains.kotlin:kotlin-test'
    compileOnly 'com.google.code.gson:gson:2.12.1'
    compileOnly 'net.mamoe.yamlkt:yamlkt:0.13.0'
}

tasks.withType(JavaExec) {
    jvmArgs += ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
}

jar {
    manifest {
        attributes(
                'Main-Class': 'org.sayandev.MainKt'
        )
    }
}

test {
    useJUnitPlatform()
}
kotlin {
    jvmToolchain(17)
}